# red-tin-logic-analyzer

./: ProjectHome.md
doc/: redtin-manual.tex
hdl/: HardwareTestbench_RedTinLogicAnalyzer.ucf  HardwareTestbench_RedTinLogicAnalyzer.v  RedTinLogicAnalyzer.v  RedTinUARTWrapper.v  redtin.xise  srltest.v  srltest.wcfg  testHardwareTestbench_RedTinLogicAnalyzer.v  testHardwareTestbench_RedTinLogicAnalyzer.v.wcfg
src/: parser.cpp  test.vcd
src/redtin/: MainWindow.cpp  MainWindow.h  main.cpp
tags/v0.1a-release/hdl/: HardwareTestbench_RedTinLogicAnalyzer.v  testHardwareTestbench_RedTinLogicAnalyzer.v
tags/v0.1a-release/src/: CMakeLists.txt
tags/v0.1a-release/src/redtin/: CMakeLists.txt  MainWindow.h
trunk/doc/: redtin-manual.tex
trunk/hdl/: HardwareTestbench_RedTinLogicAnalyzer.v  RedTinLogicAnalyzer.v  RedTinUARTWrapper.v  UART.v  filter.filter  redtin.ipf  redtin.xise  testHardwareTestbench_RedTinLogicAnalyzer.v.wcfg
trunk/src/maketruthtable/: table.cpp
trunk/src/redtin/: MainWindow.cpp  MainWindow.h
